[gd_scene load_steps=6 format=3 uid="uid://slar1ieetoeo"]

[ext_resource type="Texture2D" uid="uid://dnkl2ckxikvtq" path="res://Dialogue/art/NinePatchRect.png" id="1_6jxcp"]
[ext_resource type="Script" path="res://Dialogue/DialogueDisplay.gd" id="2_qfsxe"]
[ext_resource type="Script" path="res://Dialogue/Dialogue.gd" id="3_freqs"]
[ext_resource type="Texture2D" uid="uid://stwbcecneeas" path="res://Dialogue/art/dialogue_advance_arrow.png" id="5_7iphb"]
[ext_resource type="Script" path="res://Dialogue/DialogueAdvanceArrow.gd" id="6_260ud"]

[node name="DialogueDisplay" type="NinePatchRect"]
custom_minimum_size = Vector2(0, 240)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_6jxcp")
region_rect = Rect2(0, 0, 137, 103)
patch_margin_left = 98
patch_margin_top = 64
patch_margin_right = 98
patch_margin_bottom = 64
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_qfsxe")

[node name="TextAnchor" type="Control" parent="."]
anchors_preset = 0
offset_left = 50.0
offset_top = 51.0
offset_right = 1102.0
offset_bottom = 188.0

[node name="Dialogue" type="Label" parent="TextAnchor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 23
text = "Sample Text"
autowrap_mode = 2
clip_text = true
max_lines_visible = 4
script = ExtResource("3_freqs")

[node name="DialogueAdvanceArrow" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -85.0
offset_right = -24.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_7iphb")
script = ExtResource("6_260ud")
